--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     text-align: center;
     margin-bottom: 40px;
   }
+
+  header img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+  }
   
   h1 {
     color: #333;
