--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,30 @@ h2 {
   font-size: 1.8em;
   margin-bottom: 0.5em;
 }
+.container{
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 500px 500px 500px;
+  column-gap: 10px;
+  row-gap: 15px;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
+
+}
+
+.container div {
+  width: 300px;
+  height: 500px;
+}
+
+.container div:nth-child(2n){
+  background-color: aqua;
+}
+
+.container div:nth-child(2n+1){
+  background-color:orange;
+}
 
 
 p, ul {
