--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ nav ul {
   margin: 4px;
   padding: 0;
   display:flex;
-  justify-content: center;
+  justify-content: space-between;
   background: #333;
   color: white;
   margin-bottom: 150px;
@@ -78,19 +78,24 @@ h2 {
 }
 .container{
   display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 500px 500px 500px;
+  grid-template-columns: 250px 250px 250px;
+  grid-template-rows: 300px 300px 300px;
   column-gap: 10px;
   row-gap: 15px;
   justify-content: center;
+  align-items: center;
   padding: 0px;
   margin: 0px;
 
 }
 
 .container div {
-  width: 300px;
-  height: 500px;
+  width: 250px;
+  height:300px;
+  padding: 20px;
+  box-sizing: border-box;
+  border: 1px black groove;
+
 }
 
 .container div:nth-child(2n){
