En css aplique estilos en las clases .contenedor-cards .contenedor-card-item con la propiedad cursor: pointer; para que salga el puntero con manita en las cards de la seccion Proyectos

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ h2 {
 	overflow: hidden;
 	transition: all 0.3s ease-out, transform 0.3s ease-in-out;
 	cursor: help;
+	cursor: pointer;
 }
 
 .contenedor-cards .contenedor-card-item:hover {
