--- a/styles.css
+++ b/styles.css
@@ -92,21 +92,21 @@ h2 {
 	margin-top: 50px;
 	margin-bottom: 20px;
 	display: block;
-}
-
-.contenedor-cards {
+  }
+  
+  .contenedor-cards {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.contenedor-cards .contenedor-card-item {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-o-box-sizing: border-box;
+	justify-content: center;
+  }
+  
+  .contenedor-cards .contenedor-card-item {
+	--webkit-box-sizing: border-box;
+	--moz-box-sizing: border-box;
+	--o-box-sizing: border-box;
 	width: 25%;
 	height: 200px; /* alto fijo */
-	margin: 1%;
+	margin: 10px; /* Márgenes iguales en todas las direcciones */
 	background: #ffffff;
 	box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
@@ -114,24 +114,24 @@ h2 {
 	transition: all 0.3s ease-out, transform 0.3s ease-in-out;
 	cursor: help;
 	cursor: pointer;
-}
-
-.contenedor-cards .contenedor-card-item:hover {
-	box-shadow: 0 15px 30px rgba(0,0,0,0.3), 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	-webkit-transform: translateY(-10px) scale(1.05);
-	-ms-transform: translateY(-10px) scale(1.05);
-	-o-transform: translateY(-10px) scale(1.05);
+  }
+  
+  .contenedor-cards .contenedor-card-item:hover {
+	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3), 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	--webkit-transform: translateY(-10px) scale(1.05);
+	--ms-transform: translateY(-10px) scale(1.05);
+	--o-transform: translateY(-10px) scale(1.05);
 	transform: translateY(-10px) scale(1.05);
-}
-
-.contenedor-card-item-wrapper {
+  }
+  
+  .contenedor-card-item-wrapper {
 	overflow: hidden;
 	position: relative !important;
 	background: #3E2723;
 	border-radius: 5px;
-}
-
-.contenedor-card-item img {
+  }
+  
+  .contenedor-card-item img {
 	width: 100%;
 	height: 200px;
 	object-fit: cover;
@@ -140,9 +140,9 @@ h2 {
 	-webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 	transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 	border-radius: 5px;
-}
-
-.contenedor-card-item .contenedor-info {
+  }
+  
+  .contenedor-card-item .contenedor-info {
 	position: absolute;
 	width: 100%;
 	height: 70px;
@@ -150,9 +150,8 @@ h2 {
 	padding: 15px;
 	-webkit-transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 	transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.contenedor-card-item .contenedor-info .fondo {
+  }
+  .contenedor-card-item .contenedor-info .fondo {
 	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.73) 53%, rgba(0,0,0,0.88) 100%);
 	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.73) 53%,rgba(0,0,0,0.88) 100%);
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.73) 53%,rgba(0,0,0,0.88) 100%);
@@ -162,92 +161,94 @@ h2 {
 	position: absolute;
 	top: 0;
 	left: 0;
-}
-
-.contenedor-card-item .contenedor-info .info {
+  }
+  
+  .contenedor-card-item .contenedor-info .info {
 	color: #fff;
 	position: relative;
 	z-index: 500;
 	padding: 20px 15px;
-}
-
-.contenedor-card-item .contenedor-info .info .titulo {
-  margin: 0;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.contenedor-card-item .contenedor-info .info .categoria {
+  }
+  
+  .contenedor-card-item .contenedor-info .info .titulo {
+	margin: 0;
+	font-size: 20px;
+	font-weight: bold;
+  }
+  
+  .contenedor-card-item .contenedor-info .info .categoria {
 	display: block;
 	font-size: 14px;
 	color: #757575;
-}
-
-.contenedor-card-item:hover .contenedor-info {
+  }
+  
+  .contenedor-card-item:hover .contenedor-info {
 	bottom: 0;
-}
-
-.contenedor-card-item:hover img {
+  }
+  
+  .contenedor-card-item:hover img {
 	top: -30px;
 	-webkit-transform: rotate(-5deg) scale(2);
 	-ms-transform: rotate(-5deg) scale(2);
 	-o-transform: rotate(-5deg) scale(2);
 	transform: rotate(-5deg) scale(2);
-}
-
-@media screen and (max-width: 900px) {
+  }
+  
+  @media screen and (max-width: 900px) {
 	.contenedor-card-item:hover img {
-    top: -30px;
-    -webkit-transform: rotate(-5deg) scale(1.3);
-    -ms-transform: rotate(-5deg) scale(1.3);
-    -o-transform: rotate(-5deg) scale(1.3);
-    transform: rotate(-5deg) scale(1.3);
-  }
-
-	.contenedor-card-item .contenedor-info {
-		bottom: 0;
-	}
-}
-
-@media screen and (max-width: 767px) {
-	.contenedor {
-		width: 95%;
-	}
-
-	.contenedor-cards .contenedor-card-item {
-		width: 48%;
-		height: 300px;
-		margin: 1%;
-	}
-}
-
-@media screen and (max-width: 550px) {
-  .contenedor-cards .contenedor-card-item {
-    width: 60%;
-    height: 300px;
-    margin: 10px auto;
-  }
-}
-
-@media screen and (max-width: 480px) {
-	.contenedor {
-		width: 90%;
+	  top: -30px;
+	  -webkit-transform: rotate(-5deg) scale(1.3);
+	  -ms-transform: rotate(-5deg) scale(1.3);
+	  -o-transform: rotate(-5deg) scale(1.3);
+	  transform: rotate(-5deg) scale(1.3);
 	}
   
-  .contenedor-cards .contenedor-card-item {
-    width: 90%;
-    height: 300px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-	.contenedor {
-		width: 100%;
+	.contenedor-card-item .contenedor-info {
+	  bottom: 0;
 	}
-  .contenedor-cards .contenedor-card-item {
-    height: 300px;
   }
-}
+  
+  @media screen and (max-width: 767px) {
+	.contenedor {
+	  width: 95%;
+	}
+  
+	.contenedor-cards .contenedor-card-item {
+	  width: 48%;
+	  height: 300px;
+	  margin: 1%;
+	}
+  }
+  
+  @media screen and (max-width: 550px) {
+	.contenedor-cards .contenedor-card-item {
+	  width: 60%;
+	  height: 300px;
+	  margin: 10px auto;
+	}
+  }
+  
+  @media screen and (max-width: 480px) {
+	.contenedor {
+	  width: 90%;
+	}
+  
+	.contenedor-cards .contenedor-card-item {
+	  width: 90%;
+	  height: 300px;
+	}
+  }
+  
+  @media screen and (max-width: 400px) {
+	.contenedor {
+	  width: 100%;
+	}
+  
+	.contenedor-cards .contenedor-card-item {
+	  height: 300px;
+	}
+  }
+  
 
 
 p, ul {
