--- a/styles.css
+++ b/styles.css
@@ -203,12 +203,12 @@ nav {
 }
 
 .desktop-menu {
-  position: absolute;
+  position:fixed;
   top: 74px;
   right: 0px;
   background-color: rgba(0, 0, 0, 0.8);
   width: 100px;
-  height: auto;
+  height: 100%;
   padding: 20px 20px 0 20px;
 }
 
